# borealis

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  travis.yml
.github/workflows/: build.yml
docs/en/: basic syntax.md  constants.md  control structures.md  examples.md  functions.md  getting started.md  import.md  installation.md  operators.md  predefined constants.md  repl.md  types.md  variables.md
docs/en/stdlib/: array.md  bit.md  crypt.md  date.md  error.md  file.md  general.md  io.md  json.md  math.md  number.md  object.md  os.md  socket.md  string.md  table.md
lib/: base64.c  base64.h  md5.c  sha1.c  sha256.c
src/: borealis.c  borealis.h  element.c  element.h  error.c  error.h  state.c  state.h  stdlib.c  stdlib.h  utils.c  utils.h
src/engine/: lexer.c  lexer.h  parser.c  parser.h  parser_bytecode.c  parser_bytecode.h  preprocessor.c  preprocessor.h  processor.c  processor.h  processor_helper.c  processor_helper.h  repl.c  repl.h
src/stdlib/: array.c  array.h  bit.c  bit.h  crypt.c  crypt.h  date.c  date.h  error.c  error.h  file.c  file.h  general.c  general.h  io.c  io.h  json.c  json.h  math.c  math.h  number.c  number.h  object.c  object.h  os.c  os.h  socket.c  socket.h  string.c  string.h  table.c  table.h
tests/: control_structures.bor  functions.bor  general.bor  main.bor  stdlib.bor  test.bor
